--- a/tidy/app/src/main/res/layout/add_rooms_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_rooms_fragment.xml
@@ -15,41 +15,41 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/add_rooms"
+            android:text="@string/add_room"
             android:textSize="40dp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/spaceIdName"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/spaceIDInfo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/spaceID"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/spaceIdHolder"
-            app:layout_constraintEnd_toEndOf="@+id/spaceIdHolder"
-            app:layout_constraintStart_toStartOf="@+id/spaceIdHolder"
-            app:layout_constraintTop_toBottomOf="@id/addRoomTitle" />
-
-        <TextView
-            android:id="@+id/spaceIdHolder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/addRoomTitle"
             android:gravity="center"
-            android:text="invalid"
-            android:textSize="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spaceIdName" />
+            android:layout_marginTop="20dp">
+            <TextView
+                android:id="@+id/spaceIdName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/spaceID"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/spaceIdHolder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4sp"
+                android:hint="@string/invalid"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="143dp"
-            android:layout_height="85dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/broom"
@@ -66,48 +66,42 @@
             android:background="@null"
             android:scaleType="centerInside"
             android:text="@string/pick_image"
-            app:layout_constraintTop_toBottomOf="@+id/spaceIdHolder"
+            app:layout_constraintTop_toBottomOf="@+id/spaceIDInfo"
             app:srcCompat="@drawable/pick_image" />
 
-        <FrameLayout
-            android:id="@+id/frameLayout"
+
+        <LinearLayout
+            android:id="@+id/addRooms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginHorizontal="50dp"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/roomImage">
 
-            <LinearLayout
-                android:id="@+id/EditTexts"
+            <com.google.android.material.textfield.TextInputLayout
+                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="100dp"
-                android:orientation="vertical">
+                tools:layout_editor_absoluteX="1dp">
 
-                <EditText
-                    android:id="@+id/roomName"
+                <AutoCompleteTextView
+                    android:id="@+id/addRoomsDropdown"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:gravity="center"
-                    android:hint="@string/room"
-                    android:inputType="textPersonName"
-                    android:textSize="30sp" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/room" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <!--TODO make this a dropdown menu, not open text.-->
-                <EditText
-                    android:id="@+id/roomDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:gravity="center"
-                    android:hint="@string/room_description"
-                    android:inputType="textLongMessage"
-                    android:textSize="20sp" />
+            <EditText
+                android:id="@+id/roomDescription"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:hint="@string/task_description"
+                android:inputType="textLongMessage"
+                android:textSize="16sp"/>
 
-            </LinearLayout>
-
-        </FrameLayout>
+        </LinearLayout>
 
 
         <FrameLayout
@@ -116,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+            app:layout_constraintTop_toBottomOf="@+id/addRooms">
 
             <LinearLayout
                 android:id="@+id/AddClearLayout"
