--- a/tidy/app/src/main/res/layout/add_supplies_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_supplies_fragment.xml
@@ -16,40 +16,41 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/add_supplies"
-            android:textSize="40dp"
+            android:textSize="40sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/spaceIdName"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/spaceIDInfo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/spaceID"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/spaceIdHolder"
-            app:layout_constraintEnd_toEndOf="@+id/spaceIdHolder"
-            app:layout_constraintStart_toStartOf="@+id/spaceIdHolder"
-            app:layout_constraintTop_toBottomOf="@id/addSupplyTitle" />
-
-        <TextView
-            android:id="@+id/spaceIdHolder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/addSupplyTitle"
             android:gravity="center"
-            android:text="invalid"
-            android:textSize="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spaceIdName" />
+            android:layout_marginTop="20dp">
+            <TextView
+                android:id="@+id/spaceIdName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/spaceID"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/spaceIdHolder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4sp"
+                android:hint="@string/invalid"
+                android:textSize="20sp" />
+        </LinearLayout>
+
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="143dp"
-            android:layout_height="85dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/broom"
@@ -59,58 +60,49 @@
         <ImageButton
             android:id="@+id/supplyImage"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginHorizontal="150dp"
-            android:layout_marginVertical="40dp"
+            android:layout_height="200dp"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="20dp"
             android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="centerInside"
             android:text="@string/pick_image"
-            app:layout_constraintTop_toBottomOf="@+id/spaceIdHolder"
+            app:layout_constraintTop_toBottomOf="@+id/spaceIDInfo"
             app:srcCompat="@drawable/pick_image" />
 
-        <FrameLayout
-            android:id="@+id/frameLayout"
+        <LinearLayout
+            android:id="@+id/addSupplies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginHorizontal="50dp"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/supplyImage">
 
-            <LinearLayout
-                android:id="@+id/EditTexts"
+            <com.google.android.material.textfield.TextInputLayout
+                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="100dp"
-                android:orientation="vertical">
+                tools:layout_editor_absoluteX="1dp"
+                app:layout_constraintTop_toBottomOf="@+id/taskRoom">
 
-                <EditText
-                    android:id="@+id/supplyName"
+                <AutoCompleteTextView
+                    android:id="@+id/addSuppliesDropdown"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:gravity="center"
-                    android:hint="@string/supply"
-                    android:inputType="textPersonName"
-                    android:textSize="30sp" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/supply" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <!--TODO make this a dropdown menu, not open text.-->
+            <EditText
+                android:id="@+id/supplyDescription"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:hint="@string/supply_description"
+                android:inputType="textLongMessage"
+                android:textSize="16sp" />
 
-
-                <EditText
-                    android:id="@+id/supplyDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:gravity="center"
-                    android:hint="@string/supply_description"
-                    android:inputType="textLongMessage"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-        </FrameLayout>
-
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/frameLayout3"
@@ -118,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+            app:layout_constraintTop_toBottomOf="@+id/addSupplies">
 
             <LinearLayout
                 android:id="@+id/AddClearLayout"
@@ -188,7 +180,7 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="@string/existing_supplies"
-            android:textSize="30dp"
+            android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/recycler_view_rooms"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
