--- a/tidy/app/src/main/res/layout/tasks_recycle.xml
+++ b/tidy/app/src/main/res/layout/tasks_recycle.xml
@@ -34,16 +34,7 @@
                     android:textSize="24sp"
                     android:textStyle="bold"/>
 
-                <TextView
-                    android:id="@+id/task_due_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:text="@string/task_due_date"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold"/>
+
 
             </LinearLayout>
 
@@ -61,6 +52,15 @@
                     android:gravity="start"
                     android:text="@string/task_user"
                     android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/task_due_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="@string/task_due_date"
+                    android:textColor="@android:color/black"
+                    android:textSize="24sp"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
