fixed layout issues

--- a/tidy/app/src/main/res/layout-sw600dp/fragment_tidy_ar.xml
+++ b/tidy/app/src/main/res/layout-sw600dp/fragment_tidy_ar.xml
@@ -14,8 +14,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/ar_message"
-            android:layout_width="300dp"
-            android:layout_height="130dp"
+            android:layout_width="500dp"
+            android:layout_height="180dp"
             android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ux_fragment"
@@ -28,7 +28,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="180dp"
                 android:layout_marginBottom="60dp"
 
                 android:orientation="vertical"
@@ -47,18 +47,19 @@
                     android:fontFamily="sans-serif-condensed-medium"
                     android:text="@string/ar_welcome"
                     android:textColor="@color/tidy_primary"
-                    android:textSize="20sp" />
+                    android:textSize="35dp" />
 
                 <TextView
                     android:id="@+id/ar_guide"
-                    android:layout_width="260dp"
-                    android:layout_height="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="0.8"
                     android:fontFamily="sans-serif-condensed-medium"
                     android:gravity="center"
                     android:text="@string/ar_guide"
-                    android:textSize="15sp"
+                    android:textColor="@color/tidy_primary"
+                    android:textSize="28sp"
                     android:visibility="invisible" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -72,7 +73,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/broom" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
