--- a/tidy/app/src/main/res/layout-sw600dp/fragment_settings.xml
+++ b/tidy/app/src/main/res/layout-sw600dp/fragment_settings.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Space_ID"
-            android:textSize="10sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/view_5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.271"
@@ -21,20 +21,21 @@
 
         <View
             android:id="@+id/view_5"
-            android:layout_width="200dp"
+            android:layout_width="400dp"
             android:layout_height="1dp"
+            android:layout_marginEnd="204dp"
             android:background="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/space_id_label"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
-            app:layout_constraintVertical_bias="0.353" />
+            app:layout_constraintVertical_bias="0.356" />
 
         <TextView
             android:id="@+id/password_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Password"
-            android:textSize="10sp"
+            android:textSize="20sp"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/view_4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,46 +47,49 @@
 
         <TextView
             android:id="@+id/password"
-            android:layout_width="100dp"
-            android:layout_height="22.5dp"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
             android:layout_marginTop="4dp"
             android:text="@string/Password"
-            android:textSize="17sp"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="@+id/password_label"
+            android:textSize="34sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.482"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_4" />
 
         <EditText
             android:id="@+id/password_input"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:hint="@string/Password"
-            android:textSize="12sp"
-            android:visibility="visible"
+            android:textSize="34sp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/password_label"
-            app:layout_constraintTop_toBottomOf="@+id/password_label" />
+            app:layout_constraintTop_toTopOf="@+id/password_label" />
 
         <View
             android:id="@+id/view_4"
-            android:layout_width="200dp"
+            android:layout_width="400dp"
             android:layout_height="1dp"
+            android:layout_marginEnd="200dp"
             android:background="@color/black"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/password_label"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
-            app:layout_constraintVertical_bias="0.167" />
+            app:layout_constraintVertical_bias="0.17" />
 
         <ImageView
             android:id="@+id/profile_pic"
-            android:layout_width="100dp"
-            android:layout_height="98dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="239dp"
+            android:layout_height="190dp"
+            android:layout_marginTop="50dp"
             android:src="@drawable/user"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
+            app:layout_constraintHorizontal_bias="0.122"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -95,10 +99,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Welcome to the Settings View. Here you can change your user information."
-            android:textColor="@color/tidy_primary"
-            android:textSize="8sp"
+            android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -108,23 +112,23 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="68dp"
+            android:layout_marginStart="292dp"
+            android:layout_marginTop="108dp"
             android:text="Settings"
             android:textColor="@color/tidy_primary"
-            android:textSize="30sp"
+            android:textSize="60sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/first_name"
-            android:layout_width="75dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="72dp"
             android:layout_marginEnd="75dp"
             android:text="@string/First_Name"
-            android:textSize="12sp"
+            android:textSize="24sp"
             android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/last_name"
             app:layout_constraintHorizontal_bias="0.0"
@@ -133,45 +137,47 @@
 
         <EditText
             android:id="@+id/first_name_input"
-            android:layout_width="75dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:hint="@string/First_Name"
-            android:textSize="12sp"
-            android:visibility="visible"
+            android:textSize="24sp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/first_name_label"
             app:layout_constraintTop_toTopOf="@+id/first_name_label" />
 
         <TextView
             android:id="@+id/email"
-            android:layout_width="200dp"
-            android:layout_height="22.5dp"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
             android:layout_marginTop="1dp"
             android:text="@string/Email"
-            android:textSize="17sp"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="@+id/email_label"
+            android:textSize="34sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_label" />
 
         <EditText
             android:id="@+id/email_input"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:hint="@string/Email"
-            android:textSize="12sp"
-            android:visibility="visible"
+            android:textSize="34sp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/password"
             app:layout_constraintStart_toStartOf="@+id/email_label"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
-            app:layout_constraintVertical_bias="0.025" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/space_id"
-            android:layout_width="200dp"
-            android:layout_height="22.5dp"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
             android:text="@string/Space_ID"
-            android:textSize="17sp"
-            android:visibility="invisible"
+            android:textSize="34sp"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.482"
             app:layout_constraintStart_toStartOf="parent"
@@ -179,12 +185,12 @@
 
         <EditText
             android:id="@+id/space_id_input"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:hint="@string/Space_ID"
-            android:textSize="12sp"
-            android:visibility="visible"
+            android:textSize="34sp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/space_id_label"
             app:layout_constraintTop_toTopOf="@+id/space_id_label" />
 
@@ -194,7 +200,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/Sign_Out"
-            android:textSize="17sp"
+            android:textSize="34sp"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -206,7 +212,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/Administrator"
-            android:textSize="17sp"
+            android:textSize="34sp"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -214,44 +220,43 @@
 
         <TextView
             android:id="@+id/last_name"
-            android:layout_width="75dp"
-            android:layout_height="17dp"
-            android:layout_marginEnd="32dp"
+            android:layout_width="150dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="56dp"
             android:text="@string/Last_Name"
-            android:textSize="12sp"
+            android:textSize="24sp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/last_name_input"
             app:layout_constraintTop_toTopOf="@+id/first_name" />
 
         <EditText
             android:id="@+id/last_name_input"
-            android:layout_width="75dp"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:hint="@string/Last_Name"
-            android:textSize="12sp"
-            android:visibility="visible"
+            android:textSize="24sp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/last_name_label"
             app:layout_constraintTop_toBottomOf="@+id/last_name_label" />
 
         <ImageButton
             android:id="@+id/edit_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
             android:scrollbarSize="1dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/pencil" />
 
         <ImageButton
             android:id="@+id/save_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
             android:layout_marginEnd="8dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
@@ -262,8 +267,8 @@
 
         <ImageButton
             android:id="@+id/cancel_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="85dp"
+            android:layout_height="85dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
             android:visibility="visible"
@@ -281,7 +286,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:text="@string/Email"
-            android:textSize="10sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.29"
             app:layout_constraintStart_toStartOf="parent"
@@ -293,49 +298,49 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:text="@string/First_Name"
-            android:textSize="10sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/profile_pic"
             app:layout_constraintTop_toTopOf="@+id/profile_pic" />
 
         <Button
             android:id="@+id/profile_pic_button"
-            android:layout_width="100dp"
+            android:layout_width="216dp"
             android:layout_height="42dp"
-            android:layout_marginTop="8dp"
-            android:text="Change"
+            android:layout_marginTop="12dp"
+            android:text="Change Image"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
+            app:layout_constraintHorizontal_bias="0.136"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic" />
 
         <View
-            android:layout_width="200dp"
+            android:layout_width="400dp"
             android:layout_height="1dp"
+            android:layout_marginEnd="204dp"
             android:background="@color/black"
-            android:id="@+id/view_1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/email_label"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_label"
             app:layout_constraintVertical_bias="0.0" />
 
         <View
             android:id="@+id/view_2"
-            android:layout_width="50dp"
+            android:layout_width="100dp"
             android:layout_height="1dp"
             android:layout_marginEnd="312dp"
             android:background="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/first_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/first_name"
             app:layout_constraintTop_toBottomOf="@+id/first_name_label"
-            app:layout_constraintVertical_bias="0.076" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <View
             android:id="@+id/view_3"
-            android:layout_width="50dp"
+            android:layout_width="100dp"
             android:layout_height="1dp"
             android:background="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/last_name"
@@ -350,7 +355,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Last_Name"
-            android:textSize="10sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/first_name_label"
             app:layout_constraintTop_toTopOf="@+id/first_name_label" />
