dropdown for tasks only existing rooms; fixed current user dispaly bug

--- a/tidy/app/src/main/res/values/colors.xml
+++ b/tidy/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="tidy_primary">#24A19C</color>
     <color name="tidy_secondary">#D96098</color>
     <color name="tidy_tertiary">#FAEEE7</color>
+    <color name="tidy_background">#325288</color>
 </resources>
